examples/test/testpolicy11987.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11987
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key13: value30
      key7: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value33
          key27: value27
          key4: value25
      podSelector:
        matchLabels:
          key20: value4
          key19: value27
          key22: value28
